Fix revisi
